6-Ingress/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo6-foo-service
spec:
  selector:
    app: demo6-foo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo6-bar-service
spec:
  selector:
    app: demo6-bar-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo6-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /foo
        backend:
          serviceName: demo6-foo-service
          servicePort: 80
      - path: /bar
        backend:
          serviceName: demo6-bar-service
          servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo6-foo-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo6-foo-app
  template:
    metadata:
      labels:
        app: demo6-foo-app
    spec:
      containers:
      - name: demo6-foo-ctr
        image: altdotdetdemo.azurecr.io/demo6/foo:v1.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo6-bar-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo6-bar-app
  template:
    metadata:
      labels:
        app: demo6-bar-app
    spec:
      containers:
      - name: demo6-bar-ctr
        image: altdotdetdemo.azurecr.io/demo6/bar:v1.0
